--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -1,179 +1,194 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org"
-      xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
+>
 <head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Login and Refistration Form</title>
-  <style>
-    * {
-      margin: 0;
-      padding: 0;
-      font-family: sans-serif;
-    }
-    .submit-btn-2{
-      width: 238px;
-      padding: 10px 30px;
-      cursor: pointer;
-      display: block;
-      margin: 225px 85px 5px auto;
-      background: linear-gradient(to right, #ff105f, #ffad06);
-      border: 0;
-      outline: none;
-      border-radius: 30px;
-    }
-    .hero {
-      height: 100%;
-      width: 100%;
-      background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)),
-      url(https://cobac.work/content/files/crm-muster-7b55b740.webp);
-      background-position: center;
-      background-size: cover;
-      position: absolute;
-    }
-    .form-box {
-      width: 380px;
-      height: 480px;
-      position: relative;
-      margin: 6% auto;
-      background-color: #ffff;
-      padding: 5px;
-      overflow: hidden;
-    }
-    .button-box {
-      width: 220px;
-      margin: 35px auto;
-      position: relative;
-      box-shadow: 0 0 20px 9px #ff61241f;
-      border-radius: 30px;
-    }
-    .toggle-btn {
-      padding: 10px 30px;
-      cursor: pointer;
-      background: transparent;
-      border: 0;
-      outline: none;
-      position: relative;
-    }
-    #btn {
-      top: 0;
-      left: 0;
-      position: absolute;
-      width: 110px;
-      height: 100%;
-      background: linear-gradient(to right, #ff105f, #ffad06);
-      border-radius: 30px;
-      transition: 0.5s;
-    }
-    .input-group {
-      top: 120px;
-      position: absolute;
-      width: 280px;
-      transition: 0.5s;
-    }
-    .input-field {
-      width: 100%;
-      padding: 10px 0;
-      margin: 5px 0;
-      border-left: 0;
-      border-top: 0;
-      border-right: 0;
-      border-bottom: 1px solid #999;
-      outline: none;
-      background: transparent;
-    }
-    .submit-btn {
-      width: 85%;
-      padding: 10px 30px;
-      cursor: pointer;
-      display: block;
-      margin: 20px auto 5px auto;
-      background: linear-gradient(to right, #ff105f, #ffad06);
-      border: 0;
-      outline: none;
-      border-radius: 30px;
-    }
-    .submit-btn-2{
-      width: 178px;
-      text-align: center;
-      text-decoration: none;
-      font-family: sans-serif;
-      font-size: 13.3px;
-      padding: 10px 30px;
-      cursor: pointer;
-      display: block;
-      margin: 225px 85px 5px auto;
-      background: linear-gradient(to right, #ff105f, #ffad06);
-      border: 0;
-      outline: none;
-      border-radius: 30px;
-    }
-    .check-box {
-      margin: 30px 10px 30px 0;
-    }
-    span {
-      color: #777;
-      font-size: 12px;
-      bottom: 66px;
-      position: absolute;
-    }
-    #register {
-      left: 40px;
-    }
-    .title {
-      width: 85%;
-      padding: 60px 110px;
-      display: block;
-      margin: auto;
-      color: #777;
-    }
-    a:visited{
-      color: black;
-    }
+    <meta charset="UTF-8"/>
+    <meta content="IE=edge" http-equiv="X-UA-Compatible"/>
+    <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
+    <title>Login and Refistration Form</title>
+    <style>
+        * {
+            margin: 0;
+            padding: 0;
+            font-family: sans-serif;
+        }
+
+        .submit-btn-2 {
+            width: 238px;
+            padding: 10px 30px;
+            cursor: pointer;
+            display: block;
+            margin: 225px 85px 5px auto;
+            background: linear-gradient(to right, #ff105f, #ffad06);
+            border: 0;
+            outline: none;
+            border-radius: 30px;
+        }
+
+        .hero {
+            height: 100%;
+            width: 100%;
+            background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)),
+            url(https://cobac.work/content/files/crm-muster-7b55b740.webp);
+            background-position: center;
+            background-size: cover;
+            position: absolute;
+        }
+
+        .form-box {
+            width: 380px;
+            height: 480px;
+            position: relative;
+            margin: 6% auto;
+            background-color: #ffff;
+            padding: 5px;
+            overflow: hidden;
+        }
+
+        .button-box {
+            width: 220px;
+            margin: 35px auto;
+            position: relative;
+            box-shadow: 0 0 20px 9px #ff61241f;
+            border-radius: 30px;
+        }
+
+        .toggle-btn {
+            padding: 10px 30px;
+            cursor: pointer;
+            background: transparent;
+            border: 0;
+            outline: none;
+            position: relative;
+        }
+
+        #btn {
+            top: 0;
+            left: 0;
+            position: absolute;
+            width: 110px;
+            height: 100%;
+            background: linear-gradient(to right, #ff105f, #ffad06);
+            border-radius: 30px;
+            transition: 0.5s;
+        }
+
+        .input-group {
+            top: 120px;
+            position: absolute;
+            width: 280px;
+            transition: 0.5s;
+        }
+
+        .input-field {
+            width: 100%;
+            padding: 10px 0;
+            margin: 5px 0;
+            border-left: 0;
+            border-top: 0;
+            border-right: 0;
+            border-bottom: 1px solid #999;
+            outline: none;
+            background: transparent;
+        }
+
+        .submit-btn {
+            width: 85%;
+            padding: 10px 30px;
+            cursor: pointer;
+            display: block;
+            margin: 20px auto 5px auto;
+            background: linear-gradient(to right, #ff105f, #ffad06);
+            border: 0;
+            outline: none;
+            border-radius: 30px;
+        }
+
+        .submit-btn-2 {
+            width: 178px;
+            text-align: center;
+            text-decoration: none;
+            font-family: sans-serif;
+            font-size: 13.3px;
+            padding: 10px 30px;
+            cursor: pointer;
+            display: block;
+            margin: 225px 85px 5px auto;
+            background: linear-gradient(to right, #ff105f, #ffad06);
+            border: 0;
+            outline: none;
+            border-radius: 30px;
+        }
+
+        .check-box {
+            margin: 30px 10px 30px 0;
+        }
+
+        span {
+            color: #777;
+            font-size: 12px;
+            bottom: 66px;
+            position: absolute;
+        }
+
+        #register {
+            left: 40px;
+        }
+
+        .title {
+            width: 85%;
+            padding: 60px 110px;
+            display: block;
+            margin: auto;
+            color: #777;
+        }
+
+        a:visited {
+            color: black;
+        }
 
 
-  </style>
+    </style>
 </head>
 <body>
 <div class="hero">
-  <div class="form-box">
-    <div class="title">
-      <h2>CRM System</h2>
+    <div class="form-box">
+        <div class="title">
+            <h2>CRM System</h2>
+        </div>
+        <form class="input-group" id="register" method="post" th:action="@{/addUser}" th:object="${user}">
+            <input
+                    class="input-field"
+                    placeholder="User Name"
+                    required
+                    th:field="*{userName}"
+                    type="text"
+            />
+            <input
+                    class="input-field"
+                    placeholder="Email"
+                    required
+                    th:field="*{email}"
+                    type="email"
+            />
+            <input
+                    class="input-field"
+                    placeholder="Password"
+                    required
+                    th:field="*{password}"
+                    type="password"
+            />
+            <input
+                    class="input-field"
+                    placeholder="Phone Number"
+                    required
+                    th:field="*{phoneNumber}"
+                    type="tel"
+            />
+            <button class="submit-btn" th:href="@{/login}" type="submit">Register</button>
+        </form>
+        <a class="submit-btn-2" th:href="@{/login}">Back</a>
     </div>
-    <form th:action="@{/addUser}" th:object="${user}" method="post" id="register" class="input-group">
-      <input
-              type="text"
-              th:field="*{userName}"
-              class="input-field"
-              placeholder="User Name"
-              required
-      />
-      <input
-              type="email"
-              th:field="*{email}"
-              class="input-field"
-              placeholder="Email"
-              required
-      />
-      <input
-              type="password"
-              th:field="*{password}"
-              class="input-field"
-              placeholder="Password"
-              required
-      />
-      <input
-              type="tel"
-              th:field="*{phoneNumber}"
-              class="input-field"
-              placeholder="Phone Number"
-              required
-      />
-      <button th:href="@{/login}" type="submit" class="submit-btn">Register</button>
-    </form>
-      <a th:href="@{/login}"  class="submit-btn-2">Back</a>
-  </div>
 </div>
 
 </body>
