--- a/src/main/resources/templates/product-inquiry-list.html
+++ b/src/main/resources/templates/product-inquiry-list.html
@@ -1,248 +1,279 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org"
-      xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
+<html lang="en" xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity5"
+      xmlns:th="http://www.thymeleaf.org">
 <head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8"/>
+    <meta content="IE=edge" http-equiv="X-UA-Compatible"/>
+    <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
     <script src="https://kit.fontawesome.com/8345e13c5c.js"></script>
-  <title>Login and Refistration Form</title>
-  <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/v/bs4/jq-3.6.0/dt-1.12.1/datatables.min.css"/>
+    <title>Login and Refistration Form</title>
+    <link href="https://cdn.datatables.net/v/bs4/jq-3.6.0/dt-1.12.1/datatables.min.css" rel="stylesheet"
+          type="text/css"/>
 
-  <link
-          href="https://fonts.googleapis.com/css?family=Poppins:400,400i,600,700,800"
-          rel="stylesheet"
-  />
+    <link
+            href="https://fonts.googleapis.com/css?family=Poppins:400,400i,600,700,800"
+            rel="stylesheet"
+    />
 
-  <!--Bootstrap css-->
-  <link rel="stylesheet" th:href="@{/css/bootstrap.min.css}" />
+    <!--Bootstrap css-->
+    <link rel="stylesheet" th:href="@{/css/bootstrap.min.css}"/>
 
-  <!--Font Awesome css-->
-  <link rel="stylesheet" th:href="@{/css/fontAwesome.min.css}" />
+    <!--Font Awesome css-->
+    <link rel="stylesheet" th:href="@{/css/fontAwesome.min.css}"/>
 
-  <!--Normalizer css-->
-  <link rel="stylesheet" th:href="@{/css/jquery.animatedheadline.css}" />
+    <!--Normalizer css-->
+    <link rel="stylesheet" th:href="@{/css/jquery.animatedheadline.css}"/>
 
-  <!--Normalizer css-->
-  <link rel="stylesheet" th:href="@{/css/jquery.animatedheadline.css}" />
-  <style>
-    * {
-      margin: 0;
-      padding: 0;
-      font-family: sans-serif;
-    }
-    .hero {
-      z-index: -2;
-      height: 100%;
-      width: 100%;
-      background-color: #282A3A;
-      background-position: center;
-      background-size: cover;
-      position: absolute;
-    }
+    <!--Normalizer css-->
+    <link rel="stylesheet" th:href="@{/css/jquery.animatedheadline.css}"/>
+    <style>
+        * {
+            margin: 0;
+            padding: 0;
+            font-family: sans-serif;
+        }
 
-    .form-box {
-      z-index: 0;
-      width: 92%;
-      height: 80%;
-      position: relative;
-      margin: 100px auto 1% auto;
-      background-color: #ffff;
-      padding: 5px;
-      overflow-x: hidden;
-      overflow-y: auto;
-    }
+        .hero {
+            z-index: -2;
+            height: 100%;
+            width: 100%;
+            background-color: #282A3A;
+            background-position: center;
+            background-size: cover;
+            position: absolute;
+        }
 
-    .title {
-      text-align: center;
-      height: 18px;
-      width: 100%;
-      display: block;
-      margin: 20px 0px;
-      color: #777;
-    }
+        .form-box {
+            z-index: 0;
+            width: 92%;
+            height: 80%;
+            position: relative;
+            margin: 100px auto 1% auto;
+            background-color: #ffff;
+            padding: 5px;
+            overflow-x: hidden;
+            overflow-y: auto;
+        }
 
-    #h2-title {
-      width: 100%;
-      padding-bottom: 20px;
-    }
-    .content-table {
-      position: relative;
-      border-collapse: collapse;
-      margin: auto ;
-      width: 100%;
-      min-width: 800px;
-      max-height: 1000px;
-      font-size: 0.8em;
-      border-radius: 5px 5px 0 0;
-      overflow: hidden;
-      box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
-    }
-    .content-table thead tr {
-      background-color: #ffad06;
-      color: #fff;
-      text-align: left;
-      font-weight: bold;
-    }
-    .content-table tbody tr {
-      margin: 0%;
-      color: #777777;
-      background-color: #f3f3f3;
-      text-align: center;
-      font-weight: bold;
-    }
+        .title {
+            text-align: center;
+            height: 18px;
+            width: 100%;
+            display: block;
+            margin: 20px 0px;
+            color: #777;
+        }
 
-    .content-table th,
-    .content-table td {
-      padding: 12px 15px;
-    }
+        #h2-title {
+            width: 100%;
+            padding-bottom: 20px;
+        }
 
-    .content-table tbody tr {
-      border-bottom: 1px solid #ddd;
-    }
-    .content-table tbody tr:nth-of-type(even) {
-      background-color: #f3f3f3;
-    }
+        .content-table {
+            position: relative;
+            border-collapse: collapse;
+            margin: auto;
+            width: 100%;
+            min-width: 800px;
+            max-height: 1000px;
+            font-size: 0.8em;
+            border-radius: 5px 5px 0 0;
+            overflow: hidden;
+            box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
+        }
 
-    .content-table tbody tr:last-of-type {
-      border-bottom: 2px solid #ffad06;
-    }
-    .nav li a{
-      color: whitesmoke;
-      text-transform: uppercase;
-      font-weight: 600;
-      font-size: 13px;
-    }
-    .nav li a:hover,
-    .nav li a:checked,
-    .nav li a:active{
-      background-color: transparent;
-    }
+        .content-table thead tr {
+            background-color: #ffad06;
+            color: #fff;
+            text-align: left;
+            font-weight: bold;
+        }
 
-    .navbar-header{
-      margin-top: 5px;
-    }
+        .content-table tbody tr {
+            margin: 0%;
+            color: #777777;
+            background-color: #f3f3f3;
+            text-align: center;
+            font-weight: bold;
+        }
 
-    header{
-      height: 55px;
-    }
+        .content-table th,
+        .content-table td {
+            padding: 12px 15px;
+        }
+
+        .content-table tbody tr {
+            border-bottom: 1px solid #ddd;
+        }
+
+        .content-table tbody tr:nth-of-type(even) {
+            background-color: #f3f3f3;
+        }
+
+        .content-table tbody tr:last-of-type {
+            border-bottom: 2px solid #ffad06;
+        }
+
+        .nav li a {
+            color: whitesmoke;
+            text-transform: uppercase;
+            font-weight: 600;
+            font-size: 13px;
+        }
+
+        .nav li a:hover,
+        .nav li a:checked,
+        .nav li a:active {
+            background-color: transparent;
+        }
+
+        .navbar-header {
+            margin-top: 5px;
+        }
+
+        header {
+            height: 55px;
+        }
 
 
-    .navbar-brand {
-      padding: 15px 0;
-      text-transform: uppercase;
-      font-size: 25px;
-      display: block;
-      color: #ffffff;
-      font-weight: 800;
-    }
+        .navbar-brand {
+            padding: 15px 0;
+            text-transform: uppercase;
+            font-size: 25px;
+            display: block;
+            color: #ffffff;
+            font-weight: 800;
+        }
 
-    .navbar-brand:focus,
-    .navbar-brand:hover {
-      text-decoration: none;
-      color: #ffffff;
-    }
+        .navbar-brand:focus,
+        .navbar-brand:hover {
+            text-decoration: none;
+            color: #ffffff;
+        }
 
-    .navbar-brand span {
-      color: #ec3642;
-    }
-  </style>
+        .navbar-brand span {
+            color: #ec3642;
+        }
+    </style>
 
 
 </head>
 
 <body>
 <div class="hero">
-  <header class="nav-area navbar-fixed-top">
-    <div class="container">
-      <div class="row">
-        <!--main menu starts-->
-        <div class="col-md-12">
-          <div class="main-menu">
-            <div class="navbar navbar-cus">
-              <a th:href="@{/api/v1/dashboard/main}" class="navbar-brand">ZE<span>CRM</span></a>
+    <header class="nav-area navbar-fixed-top">
+        <div class="container">
+            <div class="row">
+                <!--main menu starts-->
+                <div class="col-md-12">
+                    <div class="main-menu">
+                        <div class="navbar navbar-cus">
+                            <a class="navbar-brand" th:href="@{/api/v1/dashboard/main}">ZE<span>CRM</span></a>
 
-              <div class="navbar-collapse collapse">
-                  <nav>
-                      <!--ADMIN NAVBAR-->
-                      <div sec:authorize="hasAnyAuthority('ROLE_ADMIN')">
-                          <ul class="nav navbar-nav navbar-right">
-                              <li><a th:href="@{/api/v1/dashboard}">Dashboard</a></li>
-                              <li><a class="smooth-menu" th:href="@{/api/v1/product/showAllProducts}">Product List</a></li>
-                              <li><a class="smooth-menu" th:href="@{/api/v1/complaint/showList}">Complaint List</a></li>
-                              <li><a class="smooth-menu" th:href="@{/api/v1/inquiry/showList}">Inquiry List</a></li>
-                              <li><a class="smooth-menu" th:href="@{/api/v1/product/addProductToUser}">Product Assignment</a></li>
-                              <li><a class="smooth-menu" th:href="@{/api/v1/product/addNewProduct}">Add Product</a></li>
-                              <li><a th:href="@{/showUserDetails(username=${#authentication.getName()})}"><i class="fa-solid fa-user fa-1x"></i></a></li>
-                              <li><a th:href="@{/logout}"><i class="fa-solid fa-arrow-right-from-bracket fa-1x"></i></a></li>
-                          </ul>
-                      </div>
+                            <div class="navbar-collapse collapse">
+                                <nav>
+                                    <!--ADMIN NAVBAR-->
+                                    <div sec:authorize="hasAnyAuthority('ROLE_ADMIN')">
+                                        <ul class="nav navbar-nav navbar-right">
+                                            <li><a th:href="@{/api/v1/dashboard}">Dashboard</a></li>
+                                            <li><a class="smooth-menu" th:href="@{/api/v1/product/showAllProducts}">Product
+                                                List</a></li>
+                                            <li><a class="smooth-menu" th:href="@{/api/v1/complaint/showList}">Complaint
+                                                List</a></li>
+                                            <li><a class="smooth-menu" th:href="@{/api/v1/inquiry/showList}">Inquiry
+                                                List</a></li>
+                                            <li><a class="smooth-menu" th:href="@{/api/v1/product/addProductToUser}">Product
+                                                Assignment</a></li>
+                                            <li><a class="smooth-menu" th:href="@{/api/v1/product/addNewProduct}">Add
+                                                Product</a></li>
+                                            <li><a th:href="@{/showUserDetails(username=${#authentication.getName()})}"><i
+                                                    class="fa-solid fa-user fa-1x"></i></a></li>
+                                            <li><a th:href="@{/logout}"><i
+                                                    class="fa-solid fa-arrow-right-from-bracket fa-1x"></i></a></li>
+                                        </ul>
+                                    </div>
 
-                      <!--USER NAVBAR-->
-                      <div sec:authorize="hasAnyAuthority('ROLE_USER')">
-                          <ul class="nav navbar-nav navbar-right">
-                              <li><a th:href="@{/api/v1/dashboard/dashboardForUser(username=${#authentication.getName()})}">Dashboard</a></li>
-                              <li><a th:href="@{/api/v1/product/showAllProductsByUsername(username=${#authentication.getName()})}">Product List</a></li>
-                              <li><a th:href="@{/api/v1/inquiry/addNewProductInquiry(username=${#authentication.getName()})}">Inquiry</a></li>
-                              <li><a th:href="@{/api/v1/complaint/addNewComplaint(username=${#authentication.getName()})}">Raise Complaint</a></li>
-                              <li><a th:href="@{/api/v1/complaint/showComplaintsByUsername(username=${#authentication.getName()})}">Complaint List</a></li>
-                              <li><a th:href="@{/api/v1/inquiry/showAllProductInquiriesByName(username=${#authentication.getName()})}">Inquiry List</a></li>
-                              <li><a th:href="@{/api/v1/recommendation(username=${#authentication.getName()})}">Recommendation</a></li>
-                              <li><a th:href="@{/showUserDetails(username=${#authentication.getName()})}"><i class="fa-solid fa-user fa-1x"></i></a></li>
-                              <li><a th:href="@{/logout}"><i class="fa-solid fa-arrow-right-from-bracket fa-1x"></i></a></li>
-                          </ul>
-                      </div>
-                  </nav>
-              </div>
+                                    <!--USER NAVBAR-->
+                                    <div sec:authorize="hasAnyAuthority('ROLE_USER')">
+                                        <ul class="nav navbar-nav navbar-right">
+                                            <li>
+                                                <a th:href="@{/api/v1/dashboard/dashboardForUser(username=${#authentication.getName()})}">Dashboard</a>
+                                            </li>
+                                            <li>
+                                                <a th:href="@{/api/v1/product/showAllProductsByUsername(username=${#authentication.getName()})}">Product
+                                                    List</a></li>
+                                            <li>
+                                                <a th:href="@{/api/v1/inquiry/addNewProductInquiry(username=${#authentication.getName()})}">Inquiry</a>
+                                            </li>
+                                            <li>
+                                                <a th:href="@{/api/v1/complaint/addNewComplaint(username=${#authentication.getName()})}">Raise
+                                                    Complaint</a></li>
+                                            <li>
+                                                <a th:href="@{/api/v1/complaint/showComplaintsByUsername(username=${#authentication.getName()})}">Complaint
+                                                    List</a></li>
+                                            <li>
+                                                <a th:href="@{/api/v1/inquiry/showAllProductInquiriesByName(username=${#authentication.getName()})}">Inquiry
+                                                    List</a></li>
+                                            <li>
+                                                <a th:href="@{/api/v1/recommendation(username=${#authentication.getName()})}">Recommendation</a>
+                                            </li>
+                                            <li><a th:href="@{/showUserDetails(username=${#authentication.getName()})}"><i
+                                                    class="fa-solid fa-user fa-1x"></i></a></li>
+                                            <li><a th:href="@{/logout}"><i
+                                                    class="fa-solid fa-arrow-right-from-bracket fa-1x"></i></a></li>
+                                        </ul>
+                                    </div>
+                                </nav>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <!--main menu ends-->
             </div>
-          </div>
         </div>
+    </header>
+    <div class="form-box">
+        <form>
+            <div class="title">
+                <h2 id="h2-title">Product Inquiry List</h2>
+            </div>
+            <table class="content-table table table-bordered table-striped " id="productinquiry-table">
+                <thead>
+                <tr>
+                    <th>Id</th>
+                    <th>Details</th>
+                    <th>E-mail</th>
+                    <th>Answer</th>
+                    <th>Result</th>
+                    <th>Action</th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr th:each="productInquiry:${productInquiry}">
+                    <td th:text="${productInquiry.id}"/>
+                    <td th:text="${productInquiry.details}"/>
+                    <td th:text="${productInquiry.mail}"/>
+                    <td th:text="${productInquiry.answer}"/>
+                    <td th:text="${productInquiry.productInquiryAnswer}"/>
+                    <td>
+                        <a class="btn btn-info" th:href="@{/api/v1/inquiry/showUpdateForm(id=${productInquiry.id})}">Update</a>
+                        <a class="btn btn-info" th:href="@{/api/v1/inquiry/deleteInquiry(id=${productInquiry.id})}">Delete</a>
+                    </td>
 
-        <!--main menu ends-->
-      </div>
+                </tr>
+
+                </tbody>
+            </table>
+        </form>
     </div>
-  </header>
-  <div class="form-box">
-    <form>
-      <div class="title">
-        <h2 id="h2-title">Product Inquiry List</h2>
-      </div>
-      <table class="content-table table table-bordered table-striped " id="productinquiry-table">
-        <thead>
-        <tr>
-          <th>Id</th>
-          <th>Details</th>
-          <th>E-mail</th>
-          <th>Answer</th>
-          <th>Result</th>
-          <th>Action</th>
-        </tr>
-        </thead>
-        <tbody>
-        <tr th:each="productInquiry:${productInquiry}">
-          <td th:text="${productInquiry.id}"/>
-          <td th:text="${productInquiry.details}"/>
-          <td th:text="${productInquiry.mail}"/>
-          <td th:text="${productInquiry.answer}"/>
-          <td th:text="${productInquiry.productInquiryAnswer}"/>
-          <td>
-            <a th:href="@{/api/v1/inquiry/showUpdateForm(id=${productInquiry.id})}" class="btn btn-info">Update</a>
-            <a th:href="@{/api/v1/inquiry/deleteInquiry(id=${productInquiry.id})}" class="btn btn-info">Delete</a>
-          </td>
-
-        </tr>
-
-        </tbody>
-      </table>
-    </form>
-  </div>
 </div>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-<script type="text/javascript" src="https://cdn.datatables.net/v/bs4/jq-3.6.0/dt-1.12.1/datatables.min.js"></script>
+<script src="https://cdn.datatables.net/v/bs4/jq-3.6.0/dt-1.12.1/datatables.min.js" type="text/javascript"></script>
 <script>
-  $(document).ready(function (){
-    $("#productinquiry-table").DataTable();
-  })
+    $(document).ready(function () {
+        $("#productinquiry-table").DataTable();
+    })
 </script>
 </body>
 </html>
