--- a/src/main/resources/templates/update-inquiry-form.html
+++ b/src/main/resources/templates/update-inquiry-form.html
@@ -1,254 +1,293 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org"
-      xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
+<html lang="en" xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity5"
+      xmlns:th="http://www.thymeleaf.org">
 <head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8"/>
+    <meta content="IE=edge" http-equiv="X-UA-Compatible"/>
+    <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
     <script src="https://kit.fontawesome.com/8345e13c5c.js"></script>
-  <title>Login and Registration Form</title>
-  <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/v/bs4/jq-3.6.0/dt-1.12.1/datatables.min.css"/>
+    <title>Login and Registration Form</title>
+    <link href="https://cdn.datatables.net/v/bs4/jq-3.6.0/dt-1.12.1/datatables.min.css" rel="stylesheet"
+          type="text/css"/>
 
-  <link
-          href="https://fonts.googleapis.com/css?family=Poppins:400,400i,600,700,800"
-          rel="stylesheet"
-  />
+    <link
+            href="https://fonts.googleapis.com/css?family=Poppins:400,400i,600,700,800"
+            rel="stylesheet"
+    />
 
-  <!--Bootstrap css-->
-  <link rel="stylesheet" th:href="@{/css/bootstrap.min.css}" />
+    <!--Bootstrap css-->
+    <link rel="stylesheet" th:href="@{/css/bootstrap.min.css}"/>
 
-  <!--Font Awesome css-->
-  <link rel="stylesheet" th:href="@{/css/fontAwesome.min.css}" />
+    <!--Font Awesome css-->
+    <link rel="stylesheet" th:href="@{/css/fontAwesome.min.css}"/>
 
-  <!--Normalizer css-->
-  <link rel="stylesheet" th:href="@{/css/jquery.animatedheadline.css}" />
+    <!--Normalizer css-->
+    <link rel="stylesheet" th:href="@{/css/jquery.animatedheadline.css}"/>
 
-  <!--Normalizer css-->
-  <link rel="stylesheet" th:href="@{/css/jquery.animatedheadline.css}" />
+    <!--Normalizer css-->
+    <link rel="stylesheet" th:href="@{/css/jquery.animatedheadline.css}"/>
 </head>
 <style>
-  * {
-    margin: 0;
-    padding: 0;
-    font-family: sans-serif;
-  }
-  .hero {
-    height: 100%;
-    width: 100%;
-    background-color: #282A3A;
-    background-position: center;
-    background-size: cover;
-    position: absolute;
-  }
-
-  .form-box {
-    width: 380px;
-    height: 480px;
-    position: relative;
-    margin: 150px auto 1% auto; /*yüzde 6'ydı*/
-    background-color: #ffff;
-    padding: 5px;
-    overflow: hidden;
-  }
-  .button-box {
-    width: 220px;
-    margin: 35px auto;
-    position: relative;
-    box-shadow: 0 0 20px 9px #ff61241f;
-    border-radius: 30px;
-  }
-  .toggle-btn {
-    padding: 10px 30px;
-    cursor: pointer;
-    background: transparent;
-    border: 0;
-    outline: none;
-    position: relative;
-  }
-  #btn {
-    top: 0;
-    left: 0;
-    position: absolute;
-    width: 110px;
-    height: 100%;
-    background: linear-gradient(to right, #ff105f, #ffad06);
-    border-radius: 30px;
-    transition: 0.5s;
-  }
-  .input-group {
-    top: 120px;
-    position: absolute;
-    width: 280px;
-    transition: 0.5s;
-  }
-  .input-field {
-    width: 100%;
-    padding: 10px 0;
-    margin: 5px 0;
-    border-left: 0;
-    border-top: 0;
-    border-right: 0;
-    border-bottom: 1px solid #999;
-    outline: none;
-    background: transparent;
-  }
-  .submit-btn {
-    width: 85%;
-    padding: 10px 30px;
-    cursor: pointer;
-    display: block;
-    margin: 30px auto;
-    background: linear-gradient(to right, #ff105f, #ffad06);
-    border: 0;
-    outline: none;
-    border-radius: 30px;
-  }
-  .check-box {
-    margin: 30px 10px 30px 0;
-  }
-  #register {
-    left: 50px;
-  }
-  .title {
-    width: 85%;
-    text-align: center;
-    padding: 25px 0;
-    display: block;
-    margin: auto;
-    color: #777;
-  }
-  .input-opt {
-    color: #777;
-    width: 100%;
-    padding: 10px 0px;
-    margin: 5px 0;
-    border-left: 0;
-    border-top: 0;
-    border-right: 0;
-    border-bottom: 1px solid #999;
-    outline: none;
-    background: transparent;
-  }
-
-      .nav li a{
-      color: whitesmoke;
-      text-transform: uppercase;
-      font-weight: 600;
-      font-size: 13px;
+    * {
+        margin: 0;
+        padding: 0;
+        font-family: sans-serif;
     }
-  .nav li a:hover,
-  .nav li a:checked,
-  .nav li a:active{
-    background-color: transparent;
-  }
 
-  .navbar-header{
-    margin-top: 5px;
-  }
+    .hero {
+        height: 100%;
+        width: 100%;
+        background-color: #282A3A;
+        background-position: center;
+        background-size: cover;
+        position: absolute;
+    }
 
-  header{
-    height: 55px;
-  }
+    .form-box {
+        width: 380px;
+        height: 480px;
+        position: relative;
+        margin: 150px auto 1% auto; /*yüzde 6'ydı*/
+        background-color: #ffff;
+        padding: 5px;
+        overflow: hidden;
+    }
 
-  .navbar-brand {
-    padding: 15px 0;
-    text-transform: uppercase;
-    font-size: 25px;
-    display: block;
-    color: #ffffff;
-    font-weight: 800;
-  }
+    .button-box {
+        width: 220px;
+        margin: 35px auto;
+        position: relative;
+        box-shadow: 0 0 20px 9px #ff61241f;
+        border-radius: 30px;
+    }
 
-  .navbar-brand:focus,
-  .navbar-brand:hover {
-    text-decoration: none;
-    color: #ffffff;
-  }
+    .toggle-btn {
+        padding: 10px 30px;
+        cursor: pointer;
+        background: transparent;
+        border: 0;
+        outline: none;
+        position: relative;
+    }
 
-  .navbar-brand span {
-    color: #ec3642;
-  }
+    #btn {
+        top: 0;
+        left: 0;
+        position: absolute;
+        width: 110px;
+        height: 100%;
+        background: linear-gradient(to right, #ff105f, #ffad06);
+        border-radius: 30px;
+        transition: 0.5s;
+    }
+
+    .input-group {
+        top: 120px;
+        position: absolute;
+        width: 280px;
+        transition: 0.5s;
+    }
+
+    .input-field {
+        width: 100%;
+        padding: 10px 0;
+        margin: 5px 0;
+        border-left: 0;
+        border-top: 0;
+        border-right: 0;
+        border-bottom: 1px solid #999;
+        outline: none;
+        background: transparent;
+    }
+
+    .submit-btn {
+        width: 85%;
+        padding: 10px 30px;
+        cursor: pointer;
+        display: block;
+        margin: 30px auto;
+        background: linear-gradient(to right, #ff105f, #ffad06);
+        border: 0;
+        outline: none;
+        border-radius: 30px;
+    }
+
+    .check-box {
+        margin: 30px 10px 30px 0;
+    }
+
+    #register {
+        left: 50px;
+    }
+
+    .title {
+        width: 85%;
+        text-align: center;
+        padding: 25px 0;
+        display: block;
+        margin: auto;
+        color: #777;
+    }
+
+    .input-opt {
+        color: #777;
+        width: 100%;
+        padding: 10px 0px;
+        margin: 5px 0;
+        border-left: 0;
+        border-top: 0;
+        border-right: 0;
+        border-bottom: 1px solid #999;
+        outline: none;
+        background: transparent;
+    }
+
+    .nav li a {
+        color: whitesmoke;
+        text-transform: uppercase;
+        font-weight: 600;
+        font-size: 13px;
+    }
+
+    .nav li a:hover,
+    .nav li a:checked,
+    .nav li a:active {
+        background-color: transparent;
+    }
+
+    .navbar-header {
+        margin-top: 5px;
+    }
+
+    header {
+        height: 55px;
+    }
+
+    .navbar-brand {
+        padding: 15px 0;
+        text-transform: uppercase;
+        font-size: 25px;
+        display: block;
+        color: #ffffff;
+        font-weight: 800;
+    }
+
+    .navbar-brand:focus,
+    .navbar-brand:hover {
+        text-decoration: none;
+        color: #ffffff;
+    }
+
+    .navbar-brand span {
+        color: #ec3642;
+    }
 </style>
 <body>
 <div class="hero">
-  <header class="nav-area navbar-fixed-top">
-    <div class="container">
-      <div class="row">
-        <!--main menu starts-->
-        <div class="col-md-12">
-          <div class="main-menu">
-            <div class="navbar navbar-cus">
-              <a th:href="@{/api/v1/dashboard/main}" class="navbar-brand">ZE<span>CRM</span></a>
+    <header class="nav-area navbar-fixed-top">
+        <div class="container">
+            <div class="row">
+                <!--main menu starts-->
+                <div class="col-md-12">
+                    <div class="main-menu">
+                        <div class="navbar navbar-cus">
+                            <a class="navbar-brand" th:href="@{/api/v1/dashboard/main}">ZE<span>CRM</span></a>
 
-              <div class="navbar-collapse collapse">
-                  <nav>
-                      <!--ADMIN NAVBAR-->
-                      <div sec:authorize="hasAnyAuthority('ROLE_ADMIN')">
-                          <ul class="nav navbar-nav navbar-right">
-                              <li><a th:href="@{/api/v1/dashboard}">Dashboard</a></li>
-                              <li><a class="smooth-menu" th:href="@{/api/v1/product/showAllProducts}">Product List</a></li>
-                              <li><a class="smooth-menu" th:href="@{/api/v1/complaint/showList}">Complaint List</a></li>
-                              <li><a class="smooth-menu" th:href="@{/api/v1/inquiry/showList}">Inquiry List</a></li>
-                              <li><a class="smooth-menu" th:href="@{/api/v1/product/addProductToUser}">Product Assignment</a></li>
-                              <li><a class="smooth-menu" th:href="@{/api/v1/product/addNewProduct}">Add Product</a></li>
-                              <li><a th:href="@{/showUserDetails(username=${#authentication.getName()})}"><i class="fa-solid fa-user fa-1x"></i></a></li>
-                              <li><a th:href="@{/logout}"><i class="fa-solid fa-arrow-right-from-bracket fa-1x"></i></a></li>
-                          </ul>
-                      </div>
+                            <div class="navbar-collapse collapse">
+                                <nav>
+                                    <!--ADMIN NAVBAR-->
+                                    <div sec:authorize="hasAnyAuthority('ROLE_ADMIN')">
+                                        <ul class="nav navbar-nav navbar-right">
+                                            <li><a th:href="@{/api/v1/dashboard}">Dashboard</a></li>
+                                            <li><a class="smooth-menu" th:href="@{/api/v1/product/showAllProducts}">Product
+                                                List</a></li>
+                                            <li><a class="smooth-menu" th:href="@{/api/v1/complaint/showList}">Complaint
+                                                List</a></li>
+                                            <li><a class="smooth-menu" th:href="@{/api/v1/inquiry/showList}">Inquiry
+                                                List</a></li>
+                                            <li><a class="smooth-menu" th:href="@{/api/v1/product/addProductToUser}">Product
+                                                Assignment</a></li>
+                                            <li><a class="smooth-menu" th:href="@{/api/v1/product/addNewProduct}">Add
+                                                Product</a></li>
+                                            <li><a th:href="@{/showUserDetails(username=${#authentication.getName()})}"><i
+                                                    class="fa-solid fa-user fa-1x"></i></a></li>
+                                            <li><a th:href="@{/logout}"><i
+                                                    class="fa-solid fa-arrow-right-from-bracket fa-1x"></i></a></li>
+                                        </ul>
+                                    </div>
 
-                      <!--USER NAVBAR-->
-                      <div sec:authorize="hasAnyAuthority('ROLE_USER')">
-                          <ul class="nav navbar-nav navbar-right">
-                              <li><a th:href="@{/api/v1/dashboard/dashboardForUser(username=${#authentication.getName()})}">Dashboard</a></li>
-                              <li><a th:href="@{/api/v1/product/showAllProductsByUsername(username=${#authentication.getName()})}">Product List</a></li>
-                              <li><a th:href="@{/api/v1/inquiry/addNewProductInquiry(username=${#authentication.getName()})}">Inquiry</a></li>
-                              <li><a th:href="@{/api/v1/complaint/addNewComplaint(username=${#authentication.getName()})}">Raise Complaint</a></li>
-                              <li><a th:href="@{/api/v1/complaint/showComplaintsByUsername(username=${#authentication.getName()})}">Complaint List</a></li>
-                              <li><a th:href="@{/api/v1/inquiry/showAllProductInquiriesByName(username=${#authentication.getName()})}">Inquiry List</a></li>
-                              <li><a th:href="@{/api/v1/recommendation(username=${#authentication.getName()})}">Recommendation</a></li>
-                              <li><a th:href="@{/showUserDetails(username=${#authentication.getName()})}"><i class="fa-solid fa-user fa-1x"></i></a></li>
-                              <li><a th:href="@{/logout}"><i class="fa-solid fa-arrow-right-from-bracket fa-1x"></i></a></li>
-                          </ul>
-                      </div>
-                  </nav>
-              </div>
+                                    <!--USER NAVBAR-->
+                                    <div sec:authorize="hasAnyAuthority('ROLE_USER')">
+                                        <ul class="nav navbar-nav navbar-right">
+                                            <li>
+                                                <a th:href="@{/api/v1/dashboard/dashboardForUser(username=${#authentication.getName()})}">Dashboard</a>
+                                            </li>
+                                            <li>
+                                                <a th:href="@{/api/v1/product/showAllProductsByUsername(username=${#authentication.getName()})}">Product
+                                                    List</a></li>
+                                            <li>
+                                                <a th:href="@{/api/v1/inquiry/addNewProductInquiry(username=${#authentication.getName()})}">Inquiry</a>
+                                            </li>
+                                            <li>
+                                                <a th:href="@{/api/v1/complaint/addNewComplaint(username=${#authentication.getName()})}">Raise
+                                                    Complaint</a></li>
+                                            <li>
+                                                <a th:href="@{/api/v1/complaint/showComplaintsByUsername(username=${#authentication.getName()})}">Complaint
+                                                    List</a></li>
+                                            <li>
+                                                <a th:href="@{/api/v1/inquiry/showAllProductInquiriesByName(username=${#authentication.getName()})}">Inquiry
+                                                    List</a></li>
+                                            <li>
+                                                <a th:href="@{/api/v1/recommendation(username=${#authentication.getName()})}">Recommendation</a>
+                                            </li>
+                                            <li><a th:href="@{/showUserDetails(username=${#authentication.getName()})}"><i
+                                                    class="fa-solid fa-user fa-1x"></i></a></li>
+                                            <li><a th:href="@{/logout}"><i
+                                                    class="fa-solid fa-arrow-right-from-bracket fa-1x"></i></a></li>
+                                        </ul>
+                                    </div>
+                                </nav>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <!--main menu ends-->
             </div>
-          </div>
         </div>
-
-        <!--main menu ends-->
-      </div>
-    </div>
-  </header>
-  <div class="form-box">
-    <div class="title">
-      <h2>Update Inquiry</h2>
-    </div>
-    <form sec:authorize="hasAnyAuthority('ROLE_USER')" th:action="@{/api/v1/inquiry/updateInquiryByUsername/{id}/{username}(id=${productInquiry.id},username=${#authentication.getName()})}" th:object="${productInquiry}"
-          method="put" id="register" class="input-group">
+    </header>
+    <div class="form-box">
+        <div class="title">
+            <h2>Update Inquiry</h2>
+        </div>
+        <form class="input-group"
+              id="register"
+              method="put"
+              sec:authorize="hasAnyAuthority('ROLE_USER')" th:action="@{/api/v1/inquiry/updateInquiryByUsername/{id}/{username}(id=${productInquiry.id},username=${#authentication.getName()})}" th:object="${productInquiry}">
 
 
-      <textarea th:field="*{details}" class="input-field" placeholder=" Details" required rows="5"
+      <textarea class="input-field" placeholder=" Details" required rows="5" th:field="*{details}"
       ></textarea>
-      <input type="email" th:field="*{mail}" class="input-field" placeholder=" Email" required
-      />
-      <button type="submit" class="submit-btn">Update</button>
-    </form>
+            <input class="input-field" placeholder=" Email" required th:field="*{mail}" type="email"
+            />
+            <button class="submit-btn" type="submit">Update</button>
+        </form>
 
-    <form sec:authorize="hasAnyAuthority('ROLE_ADMIN')" th:action="@{/api/v1/inquiry/updateInquiry/}+${productInquiry.id}" th:object="${productInquiry}"
-          method="put" id="register" class="input-group">
+        <form class="input-group"
+              id="register" method="put"
+              sec:authorize="hasAnyAuthority('ROLE_ADMIN')" th:action="@{/api/v1/inquiry/updateInquiry/}+${productInquiry.id}" th:object="${productInquiry}">
 
-        <textarea th:field="*{answer}" class="input-field" placeholder="Answer" required rows="3"
+        <textarea class="input-field" placeholder="Answer" required rows="3" th:field="*{answer}"
         ></textarea>
 
-      <textarea th:field="*{details}" class="input-field" placeholder=" Details" required rows="3"
-      ></textarea>
-      <input type="email" th:field="*{mail}" class="input-field" placeholder=" Email" required
-      />
-      <button type="submit" class="submit-btn">Update</button>
-    </form>
+            <textarea class="input-field" placeholder=" Details" required rows="3" th:field="*{details}"
+            ></textarea>
+            <input class="input-field" placeholder=" Email" required th:field="*{mail}" type="email"
+            />
+            <button class="submit-btn" type="submit">Update</button>
+        </form>
 
-  </div>
+    </div>
 </div>
 </body>
 </html>
