changed background color of table titles

--- a/src/main/resources/templates/complaint-list-by-username.html
+++ b/src/main/resources/templates/complaint-list-by-username.html
@@ -84,7 +84,7 @@
         }
 
         .content-table thead tr {
-            background-color: #ffad06;
+            background-color: #ec3642;
             color: #fff;
             text-align: left;
             font-weight: bold;
@@ -112,7 +112,7 @@
         }
 
         .content-table tbody tr:last-of-type {
-            border-bottom: 2px solid #ffad06;
+            border-bottom: 2px solid #ec3642;
         }
 
         .nav li a {
