--- a/src/main/resources/templates/product-list-by-username.html
+++ b/src/main/resources/templates/product-list-by-username.html
@@ -85,7 +85,7 @@
         }
 
         .content-table thead tr {
-            background-color: #ffad06;
+            background-color: #ec3642;
             color: #fff;
             text-align: left;
             font-weight: bold;
@@ -113,7 +113,7 @@
         }
 
         .content-table tbody tr:last-of-type {
-            border-bottom: 2px solid #ffad06;
+            border-bottom: 2px solid #ec3642;
         }
 
         .nav li a {
