--- a/src/main/resources/templates/product-inquiry-list.html
+++ b/src/main/resources/templates/product-inquiry-list.html
@@ -83,7 +83,7 @@
         }
 
         .content-table thead tr {
-            background-color: #ffad06;
+            background-color: #ec3642;
             color: #fff;
             text-align: left;
             font-weight: bold;
@@ -111,7 +111,7 @@
         }
 
         .content-table tbody tr:last-of-type {
-            border-bottom: 2px solid #ffad06;
+            border-bottom: 2px solid #ec3642;
         }
 
         .nav li a {
